Tasks Page fixes:
- Word braek has been added to title so that when the title containing a
  longer word wraps to next line it doesnt break UI.
- Contributor name overflowing the container on smaller screen like
  320px is fixed

--- a/src/components/tasks/card/card.module.scss
+++ b/src/components/tasks/card/card.module.scss
@@ -83,13 +83,10 @@ $progressTextAnimation: #9babb8;
     font-weight: 500;
     color: #041187;
     width: 65%;
+    word-break: break-all;
 
     @media (max-width: 768px) {
         width: 100%;
-    }
-
-    @media (max-width: 288px) {
-        width: 90%;
     }
 }
 
@@ -120,6 +117,7 @@ $progressTextAnimation: #9babb8;
     align-items: center;
     gap: 1rem;
     margin-top: 0.8rem;
+    flex-wrap: wrap;
 
     .card__top__button {
         margin-top: 0;
